# libavtp

./: .clang-format  .travis.yml  CONTRIBUTING.md  README.md  meson.build  meson_options.txt  ptp-lo.conf  travis.sh
examples/: aaf-listener.c  aaf-talker.c  common.c  common.h  crf-daemon.c  crf-listener.c  crf-talker.c  cvf-listener.c  cvf-talker.c  ieciidc-listener.c  ieciidc-talker.c
include/: avtp.h  avtp_aaf.h  avtp_crf.h  avtp_crf_daemon.h  avtp_cvf.h  avtp_ieciidc.h  avtp_rvf.h  avtp_vsf_stream.h
src/: avtp_aaf.c  avtp_crf.c  avtp_crf_client.c  avtp_cvf.c  avtp_ieciidc.c  avtp_rvf.c  avtp_stream.c  avtp_stream.h  avtp_vsf_stream.c  util.h
unit/: test-aaf.c  test-crf.c  test-cvf.c  test-ieciidc.c  test-rvf.c  test-stream.c  test-vsf-stream.c
